--- a/maincamp/my-app/package.json
+++ b/maincamp/my-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
+    "@hookform/resolvers": "^3.9.1",
     "antd": "^5.21.4",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
@@ -20,7 +21,8 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
