--- a/my-project/Day29/package.json
+++ b/my-project/Day29/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.16",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
