--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -18,6 +18,7 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14",
+    "zen-observable": "^0.10.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
@@ -36,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/zen-observable": "^0.8.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
