--- a/main-app/package.json
+++ b/main-app/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@ant-design/icons": "^5.5.1",
         "@apollo/client": "^3.11.8",
+        "@hookform/resolvers": "^3.9.1",
         "antd": "^5.21.6",
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
@@ -21,11 +22,13 @@
         "react": "^18",
         "react-daum-postcode": "^3.1.3",
         "react-dom": "^18",
+        "react-hook-form": "^7.53.1",
         "react-infinite-scroll-component": "^6.1.0",
         "react-youtube": "^10.1.0",
         "sweetalert2": "^11.14.4",
         "sweetalert2-react-content": "^5.0.7",
         "swiper": "^11.1.14",
+        "zod": "^3.23.8",
         "zustand": "^5.0.1"
     },
     "devDependencies": {
