--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
         "@graphql-codegen/cli": "^5.0.3",
         "@graphql-codegen/typescript": "^4.1.0",
         "@graphql-codegen/typescript-resolvers": "^4.3.0",
+        "@nestjs-modules/ioredis": "^2.0.2",
         "@nestjs/apollo": "^12.2.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
@@ -46,7 +47,10 @@
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "connect-redis": "^7.1.1",
+        "express-session": "^1.18.1",
         "graphql": "^16.9.0",
+        "ioredis": "^5.4.1",
         "mongodb": "^5.9.2",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
