--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,6 @@
         "@graphql-codegen/cli": "^5.0.3",
         "@graphql-codegen/typescript": "^4.1.0",
         "@graphql-codegen/typescript-resolvers": "^4.3.0",
-        "@nestjs-modules/ioredis": "^2.0.2",
         "@nestjs/apollo": "^12.2.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
@@ -56,6 +55,7 @@
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.13.0",
+        "redis": "^4.7.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "typeorm": "^0.3.20"
@@ -65,6 +65,8 @@
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
         "@types/express": "^4.17.17",
+        "@types/express-session": "^1.18.0",
+        "@types/ioredis": "^5.0.0",
         "@types/jest": "^29.5.2",
         "@types/multer": "^1.4.12",
         "@types/node": "^20.3.1",
