--- a/FocusOn/package.json
+++ b/FocusOn/package.json
@@ -28,6 +28,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
