--- a/02-main_camp/Day41/package.json
+++ b/02-main_camp/Day41/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
+    "@hookform/resolvers": "^3.9.1",
     "@react-icons/all-files": "^4.1.0",
     "@types/classnames": "^2.3.4",
     "antd": "^5.21.2",
@@ -25,9 +26,11 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
