--- a/homework-intermediate/day46/package.json
+++ b/homework-intermediate/day46/package.json
@@ -35,6 +35,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.13",
     "typescript": "5.5.4",
     "yup": "^1.4.0",
