--- a/study/package.json
+++ b/study/package.json
@@ -13,14 +13,16 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
     "@hookform/resolvers": "^3.9.1",
+    "@portone/browser-sdk": "^0.0.10",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "antd": "^5.21.5",
     "apollo-upload-client": "^18.0.1",
-    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
-    "graphql": "^15.8.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "quill-image-resize-module-ts": "^3.0.3",
@@ -34,6 +36,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.2",
+    "zen-observable": "^0.10.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
@@ -45,6 +49,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "@types/zen-observable": "^0.8.7",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
