--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@apollo/client": "^3.11.8",
         "antd": "^5.21.4",
+        "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
         "next": "14.2.13",
         "react": "^18",
@@ -24,6 +25,7 @@
     "devDependencies": {
         "@graphql-codegen/cli": "5.0.3",
         "@graphql-codegen/client-preset": "4.4.0",
+        "@types/apollo-upload-client": "^18.0.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
