--- a/main-app/package.json
+++ b/main-app/package.json
@@ -7,17 +7,17 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "prepare": "panda codegen",
+        "panda": "panda codegen",
         "codegen": "graphql-codegen --config codegen.ts"
     },
     "dependencies": {
-        "@ant-design/icons": "^5.5.1",
         "@apollo/client": "^3.11.8",
+        "@ark-ui/react": "^4.2.0",
         "@hookform/resolvers": "^3.9.1",
-        "antd": "^5.21.6",
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
         "lodash": "^4.17.21",
+        "lucide-react": "^0.454.0",
         "next": "^14",
         "react": "^18",
         "react-daum-postcode": "^3.1.3",
