--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"codegen": "graphql-codegen --config ./config/codegenConfig.ts"
+		"codegen": "graphql-codegen --config ./config/codegenConfig.ts && prettier --write './src/graphql/**/*.{ts,tsx}'"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
@@ -15,6 +15,7 @@
 		"@graphql-codegen/client-preset": "^4.4.0",
 		"@graphql-codegen/fragment-matcher": "^5.0.2",
 		"@graphql-codegen/typescript-react-apollo": "^4.3.2",
+		"@portone/browser-sdk": "^0.0.10",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-select": "^2.1.2",
