--- a/main-app/package.json
+++ b/main-app/package.json
@@ -14,6 +14,7 @@
         "@apollo/client": "^3.11.8",
         "@ark-ui/react": "^4.2.0",
         "@hookform/resolvers": "^3.9.1",
+        "@portone/browser-sdk": "^0.0.10",
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
         "lodash": "^4.17.21",
@@ -28,6 +29,7 @@
         "sweetalert2": "^11.14.4",
         "sweetalert2-react-content": "^5.0.7",
         "swiper": "^11.1.14",
+        "uuid": "^11.0.2",
         "zod": "^3.23.8",
         "zustand": "^5.0.1"
     },
