--- a/todaktodak/package.json
+++ b/todaktodak/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,6 +26,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.0"
