--- a/side-project/.eslintrc.json
+++ b/side-project/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/display-name": "off",
+    "@typescript-eslint/no-empty-interface": "off"
+  }
 }
