--- a/side-project/package.json
+++ b/side-project/package.json
@@ -20,6 +20,7 @@
     "apollo-upload-client": "^18.0.1",
     "codegen": "^0.1.0",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
