--- a/study/package.json
+++ b/study/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.21.5",
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.1.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
@@ -32,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
@@ -45,6 +47,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
