--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
         "apollo-server-express": "^3.13.0",
         "aws-sdk": "^2.1691.0",
         "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "connect-redis": "^7.1.1",
