--- a/FocusOn/package.json
+++ b/FocusOn/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.53.1",
     "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
     "uuid": "^11.0.2",
