--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
