--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -14,8 +14,10 @@
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
     "@hookform/resolvers": "^3.9.1",
+    "@portone/browser-sdk": "^0.0.10",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
+    "dompurify": "^3.1.7",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
@@ -26,7 +28,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.2",
     "zen-observable": "^0.10.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
@@ -34,6 +38,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
