--- a/side-project/package.json
+++ b/side-project/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-quill": "^2.0.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
