--- a/homework-intermediate/day47/package.json
+++ b/homework-intermediate/day47/package.json
@@ -39,6 +39,7 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.13",
     "typescript": "5.5.4",
+    "uuid": "^11.0.2",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
