--- a/todaktodak/package.json
+++ b/todaktodak/package.json
@@ -10,25 +10,31 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
     "lucide-react": "^0.454.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "next": "14",
+    "next-auth": "^4.24.10",
+    "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
