--- a/main-app/package.json
+++ b/main-app/package.json
@@ -15,6 +15,7 @@
         "@ark-ui/react": "^4.2.0",
         "@hookform/resolvers": "^3.9.1",
         "@portone/browser-sdk": "^0.0.10",
+        "@toast-ui/react-editor": "^3.2.3",
         "antd": "^5.21.6",
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
