--- a/maincamp/my-app/package.json
+++ b/maincamp/my-app/package.json
@@ -13,20 +13,24 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@hookform/resolvers": "^3.9.1",
+    "@portone/browser-sdk": "^0.0.10",
     "antd": "^5.21.4",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
