--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,10 @@
     "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "@portone/browser-sdk": "^0.0.10",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "codegen": "^0.1.0",
@@ -26,9 +28,12 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.2",
+    "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
