--- a/myhomework/day37/package.json
+++ b/myhomework/day37/package.json
@@ -16,6 +16,7 @@
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "next": "14.2.16",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
