--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.1.7",
     "firebase": "^11.0.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
@@ -42,6 +43,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
