--- a/homework-intermediate/day49/package.json
+++ b/homework-intermediate/day49/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "autoprefixer": "^10.4.20",
+    "dompurify": "^3.1.7",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
     "firebase": "^10.14.1",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.13",
     "@types/tailwindcss": "^3.1.0",
     "prettier": "^3.3.3",
