--- a/server/package.json
+++ b/server/package.json
@@ -50,8 +50,10 @@
         "connect-redis": "^7.1.1",
         "express-session": "^1.18.1",
         "graphql": "^16.9.0",
+        "graphql-upload": "^13.0.0",
         "ioredis": "^5.4.1",
         "mongodb": "^5.9.2",
+        "multer-s3": "^3.0.1",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
@@ -68,6 +70,7 @@
         "@nestjs/testing": "^10.0.0",
         "@types/express": "^4.17.17",
         "@types/express-session": "^1.18.0",
+        "@types/graphql-upload": "^8.0.12",
         "@types/ioredis": "^5.0.0",
         "@types/jest": "^29.5.2",
         "@types/multer": "^1.4.12",
