--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,8 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
+        "allowJs": true,
+        "maxNodeModuleJsDepth": 10,
         "target": "ES2021",
         "sourceMap": true,
         "outDir": "./dist",
