--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -30,6 +30,7 @@
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
