--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "antd": "^5.21.4",
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
+        "lodash": "^4.17.21",
         "next": "14.2.13",
         "react": "^18",
         "react-daum-postcode": "^3.1.3",
@@ -26,6 +27,7 @@
         "@graphql-codegen/cli": "5.0.3",
         "@graphql-codegen/client-preset": "4.4.0",
         "@types/apollo-upload-client": "^18.0.0",
+        "@types/lodash": "^4.17.13",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
