--- a/new-project/package.json
+++ b/new-project/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
