--- a/03-react-hw/DAY29/.eslintrc.json
+++ b/03-react-hw/DAY29/.eslintrc.json
@@ -1,4 +1,5 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "react/display-name": "off"
+  "react/display-name": "off",
+  "@typescript-eslint/no-explicit-any": "off"
 }
