--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -10,7 +10,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
+    "@apollo/client": "^3.11.10",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
@@ -27,7 +27,7 @@
     "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^14",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
