--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.21.3",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "next": "^14.2.13",
     "react": "^18.3.1",
