--- a/main-app/package.json
+++ b/main-app/package.json
@@ -27,6 +27,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.53.1",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-kakao-maps-sdk": "^1.1.27",
         "react-youtube": "^10.1.0",
         "sweetalert2": "^11.14.4",
         "sweetalert2-react-content": "^5.0.7",
@@ -46,6 +47,7 @@
         "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "eslint-config-next": "15.0.2",
+        "kakao.maps.d.ts": "^0.1.40",
         "postcss": "^8.4.47",
         "typescript": "^5.6.3"
     }
