--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "codegen": "^0.1.0",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
