--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-player": "^2.16.0",
     "react-quill-new": "^3.3.3",
     "swiper": "^11.1.14",
