--- a/study/package.json
+++ b/study/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
+    "@codecamp2/ui": "^2.8.8",
+    "@ggumi/ui": "^1.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@portone/browser-sdk": "^0.0.10",
     "@reduxjs/toolkit": "^2.2.7",
@@ -31,11 +33,13 @@
     "react-datepicker": "^7.4.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
+    "react-window": "^1.8.10",
     "redux": "^5.0.1",
     "swiper": "^11.1.14",
     "uuid": "^11.0.2",
@@ -52,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
     "@types/zen-observable": "^0.8.7",
     "daisyui": "^4.12.10",
     "eslint": "^8",
