--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^18",
         "react-infinite-scroll-component": "^6.1.0",
         "react-player": "^2.16.0",
+        "react-quill-new": "^3.3.3",
         "swiper": "^11.1.14",
         "zustand": "^5.0.1"
     },
