--- a/02-main_camp/Day47/package.json
+++ b/02-main_camp/Day47/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "@hookform/resolvers": "^3.9.1",
+    "@portone/browser-sdk": "^0.0.10",
     "@react-icons/all-files": "^4.1.0",
     "@types/classnames": "^2.3.4",
     "antd": "^5.21.2",
