--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": " graphql-codegen --config codegen.ts"
+    "codegen": " graphql-codegen --config codegen.ts",
+    "test": "jest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
@@ -17,11 +19,14 @@
     "@portone/browser-sdk": "^0.0.10",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
+    "cross-fetch": "^4.0.0",
     "dompurify": "^3.1.7",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
+    "jest-fixed-jsdom": "^0.0.9",
     "lodash": "^4.17.21",
+    "msw": "^2.6.5",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -38,8 +43,13 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@playwright/test": "^1.49.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -48,8 +58,11 @@
     "@types/zen-observable": "^0.8.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
