--- a/study/package.json
+++ b/study/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "test": "jest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
@@ -20,13 +22,16 @@
     "@tanstack/react-table": "^8.20.5",
     "antd": "^5.21.5",
     "apollo-upload-client": "^18.0.1",
+    "cross-fetch": "^4.0.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.1.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
+    "jest-fixed-jsdom": "^0.0.9",
     "lodash": "^4.17.21",
+    "msw": "^2.6.5",
     "next": "14.2.13",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.3.1",
@@ -49,9 +54,14 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@playwright/test": "^1.49.0",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
@@ -61,9 +71,12 @@
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "sass": "^1.79.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
 }
