--- a/hybrid_app_과제/my-app/package.json
+++ b/hybrid_app_과제/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-mobile",
+  "name": "my-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -29,9 +29,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "watchman": "^1.0.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
