--- a/solo/web/tsconfig.json
+++ b/solo/web/tsconfig.json
@@ -19,8 +19,10 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [],
+    "typeRoots": ["./node_modules/@types", "./global.d.ts"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "./global.d.ts"],
   "exclude": ["node_modules"]
 }
