--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.2",
-    "antd": "^5.22.2",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-kakao-maps-sdk": "^1.1.27",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
