--- a/hybrid_app/web/package.json
+++ b/hybrid_app/web/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^5.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
