--- a/hybrid-homework/web/package.json
+++ b/hybrid-homework/web/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-kakao-maps-sdk": "^1.1.27",
     "zod": "^3.23.8"
   },
   "devDependencies": {
