--- a/hybrid-homework/web/package.json
+++ b/hybrid-homework/web/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-kakao-maps-sdk": "^1.1.27",
+    "swiper": "^11.1.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
