--- a/03-native-expo/homework/web/package.json
+++ b/03-native-expo/homework/web/package.json
@@ -10,6 +10,7 @@
         "panda": "panda codegen"
     },
     "dependencies": {
+        "lucide-react": "^0.461.0",
         "next": "14.2.17",
         "react": "^18",
         "react-dom": "^18"
