--- a/03-hybrid/project/web/package.json
+++ b/03-hybrid/project/web/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "swiper": "^11.1.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
