--- a/solo/web/package.json
+++ b/solo/web/package.json
@@ -9,21 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.5",
+    "@tanstack/react-query-devtools": "^5.61.5",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/eslint-plugin-query": "^5.61.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
+    "msw": "^2.6.6",
     "postcss": "^8",
     "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
