--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.17",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
