--- a/03-native-expo/homework/web/package.json
+++ b/03-native-expo/homework/web/package.json
@@ -10,10 +10,13 @@
         "panda": "panda codegen"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.1",
         "lucide-react": "^0.462.0",
         "next": "14.2.17",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-hook-form": "^7.53.2",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@pandacss/dev": "^0.48.0",
