--- a/05-hybrid-app/web/package.json
+++ b/05-hybrid-app/web/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@hookform/resolvers": "^3.9.1",
+    "graphql": "^16.9.0",
+    "msw": "^2.6.6",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
