--- a/03-native-expo/homework/web/package.json
+++ b/03-native-expo/homework/web/package.json
@@ -16,6 +16,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.53.2",
+        "react-kakao-maps-sdk": "^1.1.27",
         "sweetalert2": "^11.14.5",
         "sweetalert2-react-content": "^5.0.7",
         "zod": "^3.23.8"
@@ -27,6 +28,7 @@
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.2.17",
+        "kakao.maps.d.ts": "^0.1.40",
         "typescript": "^5"
     }
 }
